http-service: create restore for a cluster
